@@ -1,0 +1,2 @@
+-oMm must be a valid message ID
+-oMm must be called by a trusted user/config
